# minicc

./: .gitignore  CMakeLists.txt
include/: Driver.h  Error.h  Lexer.h  Token.h
src/: Driver.cpp  Lexer.cpp  Main.cpp  Token.cpp
tests/: simple.c
